--- a/app.json
+++ b/app.json
@@ -12,7 +12,8 @@
         "pages/putForward/putForward",
         "pages/activityRules/activityRules",
         "pages/nuoList/nuoList",
-        "pages/orderList/orderList"
+        "pages/orderList/orderList",
+        "pages/getMyTrial/getMyTrial"
     ],
     "window": {
         "navigationBarBackgroundColor": "#3b5998",
