--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -29,12 +29,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "体验二维码",
 					"pathName": "pages/testSancode/testSancode",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "线上体验",
+					"pathName": "pages/getMyTrial/getMyTrial",
 					"query": ""
 				}
 			]
