--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     ],
     "window": {
         "navigationBarBackgroundColor": "#3b5998",
-        "navigationBarTitleText": "挪挪挪",
+        "navigationBarTitleText": "挪车网",
         "navigationBarTextStyle": "white",
         "enablePullDownRefresh": false
     },
